--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My first webpage!</title>
-  </head>
+   <title>My first webpage!</title>
+   <link rel="stylesheet" href="style.css" type="text/css">
+</head>
   <body>
-<h1>My First Webpage</h1>
-<h2>Written with a Little guidance from Moringa School</h2>
-
-<p>Hello, world!</p>
-<p>Welcome to my first webpage!</p>
-
-<p>Here are some things i'm going to learn about coding</p>
-<ol>
+    <h1>My First Webpage</h1>
+   <h2>Written with a Little guidance from<em>Moringa School</em></h2>
+   <p>Hello, world!</p>
+   <p>Welcome to my <strong>webpage</strong>!</p>
+   <p>Here are some things i'm going to learn about coding</p>
+   <ol>
     <li>HTML</li> 
     <li>CSS</li>
     <li>JAVA SCRIPT</li>
-    <li>And alot more!</li>
-
-</ol>
-  </body>
+    <li>And a lot more!</li>
+   </ol>
+   <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
+   <nav> <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+  </nav>
+  
+   <img src="./elephant.jpg" alt="">
+ </body>
 </html>
