--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -9,7 +9,7 @@
    <h2>Written with a Little guidance from<em>Moringa School</em></h2>
    <p>Hello, world!</p>
    <p>Welcome to my <strong>webpage</strong>!</p>
-   <p>Here are some things i'm going to learn about coding</p>
+   <p>Here are some things i'm going to learn about coding.</p>
    <ol>
     <li>HTML</li> 
     <li>CSS</li>
